# bonn-mensa

./: LICENSE  README.md  mensa.py  setup.cfg
src/: mensa.py
src/bonn_mensa/: __init__.py  mensa.py
