##########################
# Setup.py Configuration #
##########################
[metadata]
name = bonn-mensa
version = 0.0.1-dev
description = Meal plans for university canteens in Bonn
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/felixblanke/bonn-mensa
download_url = https://github.com/felixblanke/bonn-mensa
project_urls =
    Bug Tracker = https://github.com/felixblanke/bonn-mensa/issues
    Source Code = https://github.com/felixblanke/bonn-mensa

# Author information
author = Felix Blanke
author_email = info@fblanke.de
maintainer = Felix Blanke
maintainer_email = info@fblanke.de

# License information
license = EUPL-1.2
license_files = LICENSE

classifiers =
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    colorama
    requests

python_requires = >=3.8

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mensa = mensa:main
